# Claudia

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.dev.yml
.claude/: SETUP.md  settings.json
.claude/commands/: audit.md  test.md  ticket.md
.claude/hooks/: duplicate-detector.sh  format-check.sh  main-branch-protection.sh  npm-install.sh  skill-rules.json  test-runner.sh  type-check.sh
.claude/skills/duckdb-analytics/: SKILL.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pr-claude-code-review.yml  scheduled-claude-auto-improvement.yml  scheduled-claude-code-dependency-audit.yml  scheduled-claude-code-quality.yml  semgrep.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
duckdb/: README.md  examples.sql  init.sql
src/mcp/duckdb_server/: pyproject.toml
src/mcp/duckdb_server/duckdb_server/: __init__.py  server.py
